--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="container-fluid h-100 parallax">
-    <div class="row h-75 align-items-center">
+    <div class="row h-75 align-items-end">
         <div class="offset-xl-6 col-xl-3 px-5 py-3 bg1">
             <h1>bonjour</h1>
         </div>
