--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -13,6 +13,8 @@
         <div class="offset-xl-6 col-xl-3 px-5 py-3 bg1">
             <h1>bonjour</h1>
         </div>
+    </div>
+</div>
 
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
