--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fe-ca">
+<html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -13,6 +13,12 @@
         <div class="offset-xl-6 col-xl-3 px-5 py-3 bg1">
             <h1>bonjour</h1>
         </div>
+    </div>
+    <div class="row align-items-end h-25">
+        <div class="col-xl-12 bgg py-2">
+                <h1>ce que jeu veux</h1>
+        </div>
+
     </div>
 </div>
 
