--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+!-------part1--------!
 <div class="container-fluid h-100 parallax">
     <div class="row h-75 align-items-end">
         <div class="offset-xl-6 col-xl-3 px-5 py-3 bg1">
@@ -18,10 +19,20 @@
         <div class="col-xl-12 bgg py-2">
                 <h1>ce que jeu veux</h1>
         </div>
-
     </div>
 </div>
-
+<-------part2-------->
+<div class="container col-xl-12">
+    <div class="col-xl-6">
+        <ul>
+            <h1>best perso</h1>
+            <li>Gaara</li>
+            <li>Tea</li>
+            <li>Milk</li>
+        </ul>
+    </div>
+    <div class="h-75"></div>
+</div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
