--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-!-------part1--------!
+<!--part1-->
 <div class="container-fluid h-100 parallax">
     <div class="row h-75 align-items-end">
         <div class="offset-xl-6 col-xl-3 px-5 py-3 bg1">
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-<-------part2-------->
+<!--part2-->
 <div class="container col-xl-12">
     <div class="col-xl-6">
         <ul>
@@ -31,7 +31,9 @@
             <li>Milk</li>
         </ul>
     </div>
-    <div class="h-75"></div>
+    <div class="col-xl-6">
+        <img src="img/gaara.jpg" height="375" width="267"/>
+    </div>
 </div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
