--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -22,18 +22,17 @@
     </div>
 </div>
 <!--part2-->
-<div class="container col-xl-12">
-    <div class="col-xl-6">
+<div class="container">
+    <div class="col-xl-6 align-items-center">
         <ul>
-            <h1>best perso</h1>
-            <li>Gaara</li>
-            <li>Tea</li>
-            <li>Milk</li>
+        <h1>best perso</h1>
+        <li>Gaara<img class="img-fluid offset-6" src="img/gaara.jpg"/></li>
+        <li>shikamaru<img class="img-fluid offset-6" src="img/nara_shikamaru.jpg"/></li>
+        <li>Milk</li>
         </ul>
-    </div>
-    <div class="col-xl-6">
-        <img src="img/gaara.jpg" height="375" width="267"/>
-    </div>
+
+
+</div>
 </div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
