--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -23,16 +23,20 @@
 </div>
 <!--part2-->
 <div class="container">
+    <div class="row">
     <div class="col-xl-6 align-items-center">
         <ul>
         <h1>best perso</h1>
-        <li>Gaara<img class="img-fluid offset-6" src="img/gaara.jpg"/></li>
-        <li>shikamaru<img class="img-fluid offset-6" src="img/nara_shikamaru.jpg"/></li>
+        <li>Gaara</li>
+        <li>shikamaru</li>
         <li>Milk</li>
+    </div>
         </ul>
-
-
-</div>
+    <div class="col-xl-6">
+        <img class="img-fluid offset-6" src="img/gaara.jpg"/>
+        <img class="img-fluid offset-6" src="img/nara_shikamaru.jpg"/>
+    </div>
+    </div>
 </div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
