--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -25,18 +25,26 @@
 <div class="container">
     <div class="row">
     <div class="col-xl-6 align-items-center">
-        <ul>
-        <h1>best perso</h1>
-        <li>Gaara</li>
-        <li>shikamaru</li>
-        <li>Milk</li>
+        <ol type="1">
+        <h1>mes preferer</h1>
+            <li>Gaara</li>
+            <li>shikamaru</li>
+            <li>Naruto</li>
+        </ol>
     </div>
-        </ul>
     <div class="col-xl-6">
         <img class="img-fluid offset-6" src="img/gaara.jpg"/>
         <img class="img-fluid offset-6" src="img/nara_shikamaru.jpg"/>
+        <img class="img-fluid offset-6" src="img/Naruto1.jpg"/>
     </div>
     </div>
+</div>
+<!--part3-->
+<div class="container-fluid h-100 parallax1">
+    <div class="row">
+        
+    </div>
+
 </div>
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
