--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -40,12 +40,15 @@
     </div>
 </div>
 <!--part3-->
-<div class="container-fluid h-100 parallax1">
-    <div class="row">
-        
-    </div>
+<div class="container-fluid h-100 parallax1 text-center align-items-center">
+    <div class="row h-100 text-center">
+        <div class="col-xl-12"></div>
+        <div class="offset-7"><h1>nifehi</h1>
+        </div>
 
+    </div>
 </div>
+
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
