--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -43,7 +43,14 @@
 <div class="container-fluid h-100 parallax1 text-center align-items-center">
     <div class="row h-100 text-center">
         <div class="col-xl-12"></div>
-        <div class="offset-7"><h1>nifehi</h1>
+        <div class="offset-7">
+            <h1>best prof</h1>
+            <ol type="I">
+                <li>jiraya</li>
+                <li>koro sensei</li>
+                <li>all might</li>
+
+            </ol>
         </div>
 
     </div>
