--- a/DesignWeb/formulaire/index.html
+++ b/DesignWeb/formulaire/index.html
@@ -7,23 +7,33 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="bg">
 <form>
 
     <div class="container-fluid">
-        <div class="container-fluid">
-            <div class="form-row">
-                <div class="col-xl-6">
-                    <input type="text" class="form-control" placeholder="entre ton prenom">
-                </div>
-                <div class="col-xl-6">
-                    <input type="text" class="form-control" placeholder="entre ton nom">
-                </div>
+        <div class="form-row">
+            <div class="col-md-4">
+                <input type="text" class="form-control" placeholder="entre ton prenom">
             </div>
+            <div class="col-md-4">
+                <input type="text" class="form-control" placeholder="entre ton nom">
+            </div>
+        </div>
+
+        <div class="form-group col-md-4">
+            <label for="inputState">State</label>
+            <select id="inputState" class="form-control">
+                <option selected>quel est le probleme</option>
+                <option>je suis tomber sur ma bros a dent</option>
+                <option>mon ordinateur a toucher un telephone apple</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label for="exampleFormControlTextarea1" class="col-xl-6">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
     </div>
 </form>
-
 <script src="js/jquery-3.4.1.min.js"></script>
 <script src="js/bootstrap.js"></script>
 </body>
