--- a/DesignWeb/formulaire/index2.html
+++ b/DesignWeb/formulaire/index2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body class="bgpouce">
-<div class="container-fluid h-100 no-gutters">
+<div class="container-fluid h-100">
     <div class="row">
         <div class="text-center align-items-center col-xl-12">
             <h1>les données du formulaire ont été envoyées avec succès!</h1>
