--- a/DesignWeb/MaPassion/index2.html
+++ b/DesignWeb/MaPassion/index2.html
@@ -8,34 +8,119 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href=""><img src="https://img.icons8.com/color/25/000000/green-lantern-dc.png"></a>
-        <a class="navbar-brand" href="#">Ma Passion</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">page3<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Page
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html">page1</a>
-                        <a class="dropdown-item" href="index1.html">page2</a>
-                    </div>
-                </li>
-            </ul>
-        </div>
-    </nav>
-</header>
-<section>
+ <header>
+     <nav class="navbar navbar-expand-lg fixed-top ">
+         <a class="navbar-brand" href=""><img src="https://img.icons8.com/color/25/000000/green-lantern-dc.png"></a>
+         <h4>Home</h4>
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+             <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+             <ul class="navbar-nav">
+                 <li class="nav-item dropdown">
+                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Page</a>
+                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                         <a class="dropdown-item" href="index.html">Home</a>
+                         <a class="dropdown-item" href="index1.html">page2</a>
+                     </div>
+                 </li>
+             </ul>
+         </div>
+     </nav>
 
+     <div class="overlay"></div>
+
+
+ </header>
+<section class="bg-warning">
+    <div> class="container-fluid">
+        <div class="row">
+            <div class="col-xl-12 border-0">
+                <video width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                    <source src="mp4/test.mp4%20HD" type="video/mp4">
+                </video>
+            </div>
+        </div>
+    </div>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner align-items-center text-center">
+            <div class="carousel-item active">
+                <img src="img/spiderman.jpg" class="img-fluid"/>
+
+            </div>
+            <div class="carousel-item">
+                <img src="img/spiderman1.jpg" class="img-fluid"/>
+            </div>
+            <div class="carousel-item">
+                <img src="img/spiderman2.jpg" class="img-fluid"/>
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+    <div class="container-fluid">
+        <div class="row bgrouge">
+            <h1 class="bgflash">qui est Spider-man?</h1>
+            <h1 class="bgflash1">(mon hero preferer de cher Marvel)</h1>
+            <p class="bgflash1">
+                Peter Parker, alias Spider-Man (souvent écrit « Spiderman » de façon erronée), est un super-héros évoluant dans l'univers Marvel de la maison d'édition Marvel Comics. ... Le succès de ce numéro permet à Spider-Man d'avoir dès 1963 sa propre série, The Amazing Spider-Man.</p>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="bg-success">
+                <h1 class="">Stanley Lieber</h1>
+                <p class="bgstan"> dit Stan Lee, né le 28 décembre 1922 à New York et mort le 12 novembre 2018 à Los Angeles, est un scénariste américain et éditeur de comics. Son nom est associé à Marvel Comics, pour lequel il a imaginé les super-héros Spider-Man, Hulk, Iron Man, les Avengers, les X-Men, ainsi que bien d'autres personnages. Il se surnommait lui-même « Stan the Man ».
+
+                    Lee est — avec des dessinateurs comme Jack Kirby et Steve Ditko — le co-créateur de plusieurs milliers de personnages qui sont le fondement de l'univers Marvel1. À compter des années 1960, le succès de ses séries a permis l'ascension de Marvel Comics, passé avec le temps du rang de petite société d'édition à celui de groupe industriel multimédia. Il est aussi reconnu pour avoir contribué à ce que les comics américains s'émancipent d'un registre artistique à l'origine réservé à un lectorat pour la jeunesse, pour atteindre tous les publics1.
+
+                    Après son départ de Marvel, il crée, en novembre 2001, un nouveau studio nommé POW! Entertainment. Demeuré associé à Marvel en tant que symbole historique de l'entreprise, il est crédité comme producteur exécutif de la plupart des adaptations audiovisuelles des comics mettant en scène ses personnages. Dans les dernières années de sa vie, dès le début des années 20002, et principalement après la création de l'univers cinématographique Marvel, le rachat de Marvel par Disney en 2009, et le succès mondial des films alors produits, il fait des apparitions dans chacun d'entre eux, avec des caméos devenus cultes</p>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+                    Memorial
+                </button>
+
+
+                <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title">R.I.P</br>Stan Lee  1922-2018</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                            <img src="img/r.i.p stan.jpg" class="img-fluid"/>
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </section>
+
+
 
 
 
