--- a/DesignWeb/sitetetferd/index.html
+++ b/DesignWeb/sitetetferd/index.html
@@ -23,7 +23,7 @@
 </div>
 <!--part2-->
 <div class="container">
-    <div class="row">
+    <div class="row bg1 border-0 0">
     <div class="col-xl-6 align-items-center">
         <ol type="1">
         <h1>mes preferer</h1>
