--- a/DesignWeb/MaPassion/index.html
+++ b/DesignWeb/MaPassion/index.html
@@ -7,20 +7,18 @@
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://icones8.fr/icon/pack/gaming/material-outlined--blue">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg  fixed-top">
-        <a class="navbar-brand" href=""><img src="https://img.icons8.com/color/25/000000/green-lantern-dc.png"></a>
-        <a href="index.html">home</a>
+    <nav class="navbar navbar-expand-lg fixed-top ">
+        <a class="navbar-brand" href="#"><img src="https://img.icons8.com/color/25/000000/green-lantern-dc.png"></a>
+        <h4>Home</h4>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">page1<span class="sr-only">(current)</span></a>
-                </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Page</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -32,11 +30,81 @@
         </div>
     </nav>
 </header>
-<section>
-    <div class="container-fluid p-0">
-        <div class="parallax">
+
+<section class="ban">
+
+   <div class="container-fluid h-100 no-gutters">
+       <div class="row">
+           <div class="col-xl-12 p-0 ban">
+
+           </div>
+       </div>
+
+   </div>
+
+    <div class="jumbotron jumbotron-fluid bgvs m-0 mb-0 p-md-5">
+        <div class="container-fluid">
+            <h1 class="display-4 text-center">Dc vc Marvel</h1>
+
+        </div>
+        <div class="row">
+            <div class="col-xl-4">
+                <img src="img/vs3.jpg" class="img-fluid"/>
+            </div>
+            <div class="col-xl-8">
+                <p class="size">IRON MAN? ENTRE THOR ET HULK? ALORS QUE LES AMATEURS SE DÉLECTENT DES COMBATS DU GENRE, UNE BATAILLE BEAUCOUP PLUS IMPORTANTE SE JOUE EN COULISSE : CELLE OPPOSANT MARVEL À DC. MAIS EST-CE RÉELLEMENT UNE LUTTE À ARMES ÉGALES? MARVEL EST RÉCEMMENT DEVENUE LA FRANCHISE CINÉMATOGRAPHIQUE LA PLUS PROFITABLE DE L’HISTOIRE DU CINÉMA ET ON COMPTE À L’HEURE ACTUELLE SIX DE SES PRODUCTIONS DANS LE TOP 20 DES FILMS AYANT LE PLUS RAPPORTÉ À TRAVERS LE MONDE. DC N’EN A AUCUNE.</p>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="container-fluid parallaxinterogation">
+        <form class="form-inline">
+            <div class="row">
+                <label class="my-1 mr-2 col-xl-12" for="inlineFormCustomSelectPref"><h1 class="bgblanc">quelle est votre préférence</h1></label>
+                <select class="custom-select my-1 mr-sm-2 col-xl-12 col-md-12" id="inlineFormCustomSelectPref">
+                    <option selected>Choose...</option>
+                    <option value="Dc">Dc</option>
+                    <option value="Marvel">Marvel</option>
+                </select>
+                    <div class="form-group col-xl-6">
+                        <label for="exampleFormControlTextarea1" class="col-xl-6"><h1 class="bgblanc">pourquoi?</h1></label>
+                        <textarea class="form-control col-xl-6" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="entre ton prenom">
+                </div>
+                <div class="col-md-6">
+                    <input type="text" class="form-control" placeholder="entre ton nom">
+                </div>
+            </div>
+
+            <a href="index3.html" class="btn btn-danger btn-lg active" role="button" aria-pressed="true"><h6>remetre</h6></a>
+        </form>
+    </div>
+
+    <div class="container-fluid bggris ">
+        <div class="row">
+
+            <div class="col-xl-3">
+                    <i class="fab fa-instagram fa-5x"></i>
+            </div>
+            <div class="col-xl-3 ">
+                    <i class="fab fa-facebook-f fa-5x"></i>
+            </div>
+            <div class="col-xl-3 ">
+                    <i class="fab fa-twitter fa-5x"></i>
+            </div>
+            <div class="col-xl-3 ">
+                    <i class="fab fa-snapchat-ghost fa-5x"></i>
+            </div>
         </div>
     </div>
+
 </section>
 
 
