--- a/DesignWeb/MaPassion/index1.html
+++ b/DesignWeb/MaPassion/index1.html
@@ -9,21 +9,19 @@
 </head>
 <body>
 <header>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg fixed-top ">
         <a class="navbar-brand" href=""><img src="https://img.icons8.com/color/25/000000/green-lantern-dc.png"></a>
-        <h4 class="bgmarvel">Ma Passion</h4>
+        <h4>Home</h4>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">page2<span class="sr-only">(current)</span></a>
-                </li>
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Page</a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="index.html">page1</a>
+                        <a class="dropdown-item" href="index.html">Home</a>
                         <a class="dropdown-item" href="index2.html">page3</a>
                     </div>
                 </li>
@@ -31,10 +29,80 @@
         </div>
     </nav>
 </header>
-<div class="container-fluid p-0">
-    <div class="parallax">
+<section>
+    <div class="container-fluid">
+        <div class="row parallaxdc1">
+
+        </div>
     </div>
-</div>
+    <div id="demo" class="carousel slide" data-ride="carousel">
+
+        <!-- Indicators -->
+        <ul class="carousel-indicators">
+            <li data-target="#demo" data-slide-to="0" class="active"></li>
+            <li data-target="#demo" data-slide-to="1"></li>
+            <li data-target="#demo" data-slide-to="2"></li>
+        </ul>
+
+        <!-- The slideshow -->
+        <div class="carousel-inner align-items-center text-center">
+            <div class="carousel-item active">
+                <img src="img/flash1.jpg" class="img-fluid"/>
+
+            </div>
+            <div class="carousel-item">
+                <img src="img/flash2.jpg" class="img-fluid"/>
+            </div>
+            <div class="carousel-item">
+                <img src="img/flash3.jpg" class="img-fluid"/>
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+        </a>
+        <a class="carousel-control-next" href="#demo" data-slide="next">
+            <span class="carousel-control-next-icon"></span>
+        </a>
+
+    </div>
+    <div  class="container-fluid">
+        <div class="row bgrouge">
+            <h1 class="bgflash">qui est Flash?</h1>
+            <h1 class="bgflash1">(mon hero preferer de cher Dc)</h1>
+       <p class="bgflash1">Flash est le nom de plusieurs personnages de fiction appartenant à l'univers de DC Comics. Les différents Flash sont tous dotés de la capacité de se déplacer à très grande vitesse (ils sont appelés des Speedsters). Le costume du super-héros Flash est souvent rouge et jaune, avec au centre un éclair sur fond blanc pour désigner sa vitesse. Mais le tout premier avait également un casque d'acier, inspiré du dieu grec Hermès (ou Mercure chez les Romains), doté lui aussi, d'une vitesse hors du commun. Il a été créé par Gardner Fox et Harry Lampert.</p>
+        </div>
+    </div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xl-12 bg-warning">
+                <h1>top 10 des meilleur hero (DC) selon moi</h1>
+
+                <div class="card col-xl-2 bg-primary"><h1>1.flash</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>2.green lantern</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>3.cyborg</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>4.aquaman</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>5.martian manhunter</h1>
+                </div>
+
+                <div class="card col-xl-2 bg-primary"><h1>6.Red Tornado</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>7.Batman</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>8.Blue Beetle</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>9.Superman</h1>
+                </div>
+                <div class="card col-xl-2 bg-primary"><h1>10.Black Ligntning</h1>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
 
 
