--- a/DesignWeb/MaPassion/index2.html
+++ b/DesignWeb/MaPassion/index2.html
@@ -106,7 +106,38 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                            <img src="img/r.i.p stan.jpg" class="img-fluid"/>
+                                <div id="demo" class="carousel slide" data-ride="carousel">
+
+                                    <!-- Indicators -->
+                                    <ul class="carousel-indicators">
+                                        <li data-target="#demo" data-slide-to="0" class="active"></li>
+                                        <li data-target="#demo" data-slide-to="1"></li>
+                                        <li data-target="#demo" data-slide-to="2"></li>
+                                    </ul>
+
+                                    <!-- The slideshow -->
+                                    <div class="carousel-inner align-items-center text-center">
+                                        <div class="carousel-item active">
+                                            <img src="img/flash1.jpg" class="img-fluid"/>
+
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/flash2.jpg" class="img-fluid"/>
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img src="img/flash3.jpg" class="img-fluid"/>
+                                        </div>
+                                    </div>
+
+                                    <!-- Left and right controls -->
+                                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                        <span class="carousel-control-prev-icon"></span>
+                                    </a>
+                                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                                        <span class="carousel-control-next-icon"></span>
+                                    </a>
+
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
