--- a/DesignWeb/MaPassion/index2.html
+++ b/DesignWeb/MaPassion/index2.html
@@ -118,11 +118,11 @@
                                     <!-- The slideshow -->
                                     <div class="carousel-inner align-items-center text-center">
                                         <div class="carousel-item active">
-                                            <img src="img/flash1.jpg" class="img-fluid"/>
+                                            <img src="img/r.i.p%20stan.jpg" class="img-fluid"/>
 
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/flash2.jpg" class="img-fluid"/>
+                                            <img src="img/spiderman.jpg" class="img-fluid"/>
                                         </div>
                                         <div class="carousel-item">
                                             <img src="img/flash3.jpg" class="img-fluid"/>
