--- a/DesignWeb/MaPassion/index2.html
+++ b/DesignWeb/MaPassion/index2.html
@@ -42,13 +42,13 @@
             </div>
         </div>
     </div>
-    <div id="demo" class="carousel slide" data-ride="carousel">
+    <div id="sp" class="carousel slide" data-ride="carousel">
 
         <!-- Indicators -->
         <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
+            <li data-target="#sp" data-slide-to="0" class="active"></li>
+            <li data-target="#sp" data-slide-to="1"></li>
+            <li data-target="#sp" data-slide-to="2"></li>
         </ul>
 
         <!-- The slideshow -->
@@ -66,10 +66,10 @@
         </div>
 
         <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <a class="carousel-control-prev" href="#sp" data-slide="prev">
             <span class="carousel-control-prev-icon"></span>
         </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
+        <a class="carousel-control-next" href="#sp" data-slide="next">
             <span class="carousel-control-next-icon"></span>
         </a>
 
@@ -106,34 +106,33 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <div id="demo" class="carousel slide" data-ride="carousel">
+                                <div id="stan" class="carousel slide" data-ride="carousel">
 
                                     <!-- Indicators -->
                                     <ul class="carousel-indicators">
-                                        <li data-target="#demo" data-slide-to="0" class="active"></li>
-                                        <li data-target="#demo" data-slide-to="1"></li>
-                                        <li data-target="#demo" data-slide-to="2"></li>
+                                        <li data-target="#stan" data-slide-to="0" class="active"></li>
+                                        <li data-target="#stan" data-slide-to="1"></li>
+                                        <li data-target="#stan" data-slide-to="2"></li>
                                     </ul>
 
                                     <!-- The slideshow -->
                                     <div class="carousel-inner align-items-center text-center">
                                         <div class="carousel-item active">
                                             <img src="img/r.i.p%20stan.jpg" class="img-fluid"/>
-
                                         </div>
                                         <div class="carousel-item">
                                             <img src="img/spiderman.jpg" class="img-fluid"/>
                                         </div>
                                         <div class="carousel-item">
-                                            <img src="img/flash3.jpg" class="img-fluid"/>
+                                            <img src="img/marvel-logo.jpg" class="img-fluid"/>
                                         </div>
                                     </div>
 
                                     <!-- Left and right controls -->
-                                    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                                    <a class="carousel-control-prev" href="#stan" data-slide="prev">
                                         <span class="carousel-control-prev-icon"></span>
                                     </a>
-                                    <a class="carousel-control-next" href="#demo" data-slide="next">
+                                    <a class="carousel-control-next" href="#stan" data-slide="next">
                                         <span class="carousel-control-next-icon"></span>
                                     </a>
 
