--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -14,7 +14,7 @@
 <div class="container-fluid">
     <div class="row">
         <div id="pokemondiv">
-            <img src="pokemon/pokeball.png" height="200" width="200" id="pokemonimg"/>
+            <img src="pokemon/Pokeball.png" height="200" width="200" id="pokemonimg"/>
         </div>
         <div id="test"></div>
     </div>
