--- a/DesignWeb/exame2AntoineHéon/index.html
+++ b/DesignWeb/exame2AntoineHéon/index.html
@@ -13,14 +13,13 @@
 </head>
 <body>
 <!-------------------------------------------------------------------------->
-<div class="container-fluid">
-    <div class="row text-center bgphotocity">
+<div class="container-fluid noprint ">
+    <div class="row text-center ">
         <div class="col-xl-12 mb-0">
                <h1>photocity</h1>
         </div>
         <div class="offset-4"></div>
         <div class="col-xl-4">
-            <label id="compteur" for="nom">entrez votre nom</label>
             <input type="text" class="form-control" id="nom" placeholder="mot min et max (3-12)">
             <h4 class="col-xl-12 rouge id" id="cours">trop cours</h4>
             <h4 class="col-xl-12 rouge" id="long">trop long</h4>
@@ -32,7 +31,7 @@
     </div>
 </div>
 <!-------------------------------------------------------------------------->
-<div class="container-fluid">
+<div class="container-fluid bgphotocity" id="printthis">
     <div class="row text-center align-items-center p-md-5" id="bgchange">
 
         <div class="col-1 1">
@@ -80,10 +79,10 @@
         <div class="col-1 1">
             <img id="12" src="Letters/T/T1.jpg" class="img-fluid"/>
         </div>
-
+    </div>
 </div>
 <!-------------------------------------------------------------------------->
-<div class="container-fluid">
+<div class="container-fluid noprint ">
     <div class="row">
         <div id="blanc" class="offset-1">
 
@@ -112,7 +111,6 @@
 
         </div>
 
-        </div>
     </div>
 </div>
 
