--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -23,6 +23,7 @@
         </div>
         <div>
             <h1></h1>
+            <h4 id="nom"></h4>
             <img src="pokemon/Pokeball.png" height="200" width="200" id="pokemonimg"/>
         </div>
     </div>
