--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -21,11 +21,13 @@
             <input type="text" class="form-control col-4" id="pkenumber" placeholder=" max (151)">
             <button class="btn white border border-red round-large col-4" id="go">pokemon GO!</button>
         </div>
-        <div>
-            <h1></h1>
-            <h4 id="nom"></h4>
-            <img src="pokemon/Pokeball.png" height="200" width="200" id="pokemonimg"/>
-        </div>
+        <div class="col-3" id="bgpokedex">
+            <div id="margineset">
+                <h4 id="nom"></h4>
+                <img src="pokemon/Pokeball.png" height="150" width="150" id="pokemonimg"/>
+            </div>
+
+
     </div>
 </div>
 </body>
