--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -2,6 +2,7 @@
 <html lang="fr-ca">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" type="image/png" href="pokemon/pokeball1.png" />
     <title>pokemon</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
