--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -17,16 +17,17 @@
 <body>
 <div class="container-fluid">
     <div class="row">
-        <div class="col-12">
+        <div class="col-12 mt-3">
             <div class="offset-4"></div>
-            <input type="text" class="form-control col-4" id="pkenumber" placeholder=" max (151)">
+            <input type="text" class="form-control col-4 cela" id="pkenumber" placeholder=" max (151)">
             <button class="btn white border border-red round-large col-4" id="go">pokemon GO!</button>
         </div>
-        <div class="col-3" id="bgpokedex">
+        <div class="col-xl-3 col-md-6" id="bgpokedex">
             <div id="margineset">
                 <h4 id="nom"></h4>
                 <img src="pokemon/Pokeball.png" height="150" width="150" id="pokemonimg"/>
             </div>
+        </div>
 
 
     </div>
