--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -6,6 +6,8 @@
     <title>pokemon</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css libreri/wow.css">
+    <link rel="stylesheet" href="css libreri/csshake.css">
 
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/bootstrap.js" defer></script>
@@ -15,6 +17,9 @@
 
 </head>
 <body>
+<audio>
+    <source src="song/Pokemon_Theme_Song_In_French.mp3" type="audio/mpeg">
+</audio>
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 mt-3">
@@ -25,7 +30,7 @@
         <div class="col-xl-3 col-md-6" id="bgpokedex">
             <div id="margineset">
                 <h4 id="nom"></h4>
-                <img src="pokemon/Pokeball.png" height="150" width="150" id="pokemonimg"/>
+                <img src="pokemon/Pokeball.png" class="animated span3 wow flip" height="150" width="150" id="pokemonimg"/>
             </div>
         </div>
 
