--- a/DesignWeb/pokemonlist/index1.html
+++ b/DesignWeb/pokemonlist/index1.html
@@ -25,9 +25,8 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <img src="https://img.icons8.com/color/30/000000/pokedex.png">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+    <img id="navpok" src="https://img.icons8.com/color/48/000000/pokeball-2.png" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
 
