--- a/DesignWeb/pokemonlist/index3.html
+++ b/DesignWeb/pokemonlist/index3.html
@@ -8,9 +8,10 @@
 
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/bootstrap.js" defer></script>
+    <script src="pokemontableau.js" defer></script>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
     <img src="https://img.icons8.com/color/30/000000/pokedex.png">
     <img id="navpok" src="https://img.icons8.com/color/48/000000/pokeball-2.png" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -34,5 +35,19 @@
         </ul>
     </div>
 </nav>
+<div class="container-fluid">
+
+    <div class="row">
+        <div class="col-xl-12 p-0">
+            <video  width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+                <source src="background/POKEMON%20GO.mp4" type="video/mp4">
+            </video>
+            
+        </div>
+    </div>
+
+</div>
+
+
 </body>
 </html>
