--- a/DesignWeb/pokemonlist/index2.html
+++ b/DesignWeb/pokemonlist/index2.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item ">
-                <a class="nav-link" href="index1.html">pokedex<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">pokedex<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="index2.html">page2</a>
@@ -35,39 +35,48 @@
         </ul>
     </div>
 </nav>
+<div class="container-fluid">
+    <div class="row">
+        <div id="demo" class="carousel slide" data-ride="carousel">
 
-<div id="demo" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ul class="carousel-indicators">
+                <li data-target="#demo" data-slide-to="0" class="active"></li>
+                <li data-target="#demo" data-slide-to="1"></li>
+                <li data-target="#demo" data-slide-to="2"></li>
+            </ul>
 
-    <!-- Indicators -->
-    <ul class="carousel-indicators">
-        <li data-target="#demo" data-slide-to="0" class="active"></li>
-        <li data-target="#demo" data-slide-to="1"></li>
-        <li data-target="#demo" data-slide-to="2"></li>
-    </ul>
+            <!-- The slideshow -->
+            <div class="carousel-inner align-items-center text-center">
+                <div class="carousel-item active">
+                    <img src="background/Salamèche.jpg" class="img-fluid"/>
 
-    <!-- The slideshow -->
-    <div class="carousel-inner align-items-center text-center">
-        <div class="carousel-item active">
-            <img src="background/Salamèche.jpg" class="img-fluid"/>
+                </div>
+                <div class="carousel-item">
+                    <img src="background/carapuce.jpg" class="img-fluid"/>
+                </div>
+                <div class="carousel-item">
+                    <img src="background/Bulbizarre.jpg" class="img-fluid"/>
+                </div>
+            </div>
 
-        </div>
-        <div class="carousel-item">
-            <img src="background/carapuce.jpg" class="img-fluid"/>
-        </div>
-        <div class="carousel-item">
-            <img src="background/Bulbizarre.jpg" class="img-fluid"/>
+            <!-- Left and right controls -->
+            <a class="carousel-control-prev" href="#demo" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a class="carousel-control-next" href="#demo" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+
         </div>
     </div>
-
-    <!-- Left and right controls -->
-    <a class="carousel-control-prev" href="#demo" data-slide="prev">
-        <span class="carousel-control-prev-icon"></span>
-    </a>
-    <a class="carousel-control-next" href="#demo" data-slide="next">
-        <span class="carousel-control-next-icon"></span>
-    </a>
-
 </div>
+<div class="container-fluid bgstarter">
+    <div class="row text-center">
+        <h1 class="jumbotron">lequel allez vous choisire</h1>
+    </div>
+</div>
+
 
 </body>
 </html>
