--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -20,7 +20,7 @@
 <audio autoplay>
     <source src="song/Pokemon_Theme_Song_In_French.mp3" type="audio/mpeg">
 </audio>
-<body>
+<body class="bglegendaire1g">
 
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light ">
@@ -31,7 +31,7 @@
         <ul class="navbar-nav">
 
             <li class="nav-item active">
-                <a class="nav-link" href="index1.html">pokedex<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">pokedex<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index2.html">page2</a>
@@ -50,7 +50,7 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row">
+    <div class="row ">
         <div class="col-12 mt-3">
             <div class="offset-4"></div>
             <input type="text" class="form-control col-4 cela" id="pkenumber" placeholder=" max (151)">
