--- a/DesignWeb/pokemonlist/index3.html
+++ b/DesignWeb/pokemonlist/index3.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index1.html">pokedex<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">pokedex<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index2.html">page2</a>
@@ -42,7 +42,6 @@
             <video  width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
                 <source src="background/POKEMON%20GO.mp4" type="video/mp4">
             </video>
-            
         </div>
     </div>
 
