--- a/DesignWeb/pokemonlist/index4.html
+++ b/DesignWeb/pokemonlist/index4.html
@@ -18,7 +18,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="index1.html">pokedex<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="index.html">pokedex<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index2.html">page2</a>
