--- a/DesignWeb/pokemonlist/index.html
+++ b/DesignWeb/pokemonlist/index.html
@@ -37,7 +37,7 @@
                 <a class="nav-link" href="index2.html">page2</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="index3.html">page3</a>
+                <a class="nav-link" href="index3.html">Pokemon Go</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index4.html">page4</a>
