--- a/DesignWeb/pokemonlist/index2.html
+++ b/DesignWeb/pokemonlist/index2.html
@@ -24,7 +24,7 @@
                 <a class="nav-link" href="index2.html">page2</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="index3.html">page3</a>
+                <a class="nav-link" href="index3.html">Pokemon Go</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="index4.html">page4</a>
@@ -73,8 +73,59 @@
 </div>
 <div class="container-fluid bgstarter">
     <div class="row text-center">
-        <h1 class="jumbotron">lequel allez vous choisire</h1>
+        <h1 class="jumbotron col-xl-12 mb-0">lequel allez vous choisire?!</h1>
     </div>
+</div>
+<div class="container-fluid bgblue">
+    <div class="row">
+        <div class="col-xl-4 card">
+        <img src="background/Artikodin.png" height="600" width="529"/>
+        </div>
+        <p class="col-md-4 bleu">Artikodin est un grand Pokémon aviaire avec un plumage bleu prédominant. On dit que ses larges
+            ailes sont faites de glace. Il a sur la tête une crête composée de trois plumes en forme de losanges
+            bleu foncé, et des yeux rouges. Son court bec et ses longues pattes sont gris. Il a une queue bleu foncé
+            qui ressemble à une banderole et qui est plus longue que son corps.
+
+            Quand Artikodin bouge ses ailes, il peut faire baisser la température de
+            l'air ambiant et faire tomber la neige. Il vole de montagne enneigée en montagne
+            enneigée. Selon une légende ancienne, il est dit qu'il apparaît aux aventuriers perdus
+            en pleine montagne. Comme vu dans le dessin animé, Artikodin aide parfois les humains perdus
+            et les emmène en sûreté. Artikodin vit dans les endroits isolés et froids, comme le pic des montagnes.</p>
+    </div>
+
+</div>
+
+<div class="container-fluid bgyello">
+    <div class="row">
+        <div class="col-xl-6 card">
+            <img src="background/Électhor.png" height="551" width="800"/>
+        </div>
+        <p class="col-md-4 jaune">Électhor a un corps jaune, et possède deux paires d'ailes.
+            L’une est jaune comme son plumage et l’autre est noire. Ses ailes sont en pics sur les côtés.
+            Il a deux petits yeux noirs avec des cernes noirs. Son bec est pointu et orange et il a des serres
+            orange à quatre orteils (un derrière et trois devant). Dans les jeux de la première génération,
+            Électhor n'avait que deux serres, contre trois par la suite.
+
+            Électhor est basé sur la légende amérindienne de l'oiseau-tonnerre, l'esprit du tonnerre,
+            des éclairs et de la pluie. Les battements de ses ailes créeraient le tonnerre. Il peut aussi
+            avoir été basé sur l’impundulu, un oiseau de sorcellerie d'Afrique du Sud qui provoquerait le
+            tonnerre et les éclairs avec ses ailes et ses serres.</p>
+    </div>
+
+</div>
+
+<div class="container-fluid bgred">
+    <div class="row">
+        <div class="col-xl-6 card">
+            <img src="background/Sulfura.png" height="376" width="800"/>
+        </div>
+        <p class="col-md-4 rouge">Sulfura est un grand oiseau de couleur jaune orangé.
+            Il possède un long bec marron, et est reconnaissable à ses ailes, crête et
+            panache enflammés rouge et rose. Il a également une queue enflammée rouge
+            et rose. Il a des serres marron à quatre orteils (un derrière et trois devant).
+            Il a des yeux triangulaires noirs.</p>
+    </div>
+
 </div>
 
 
