--- a/DesignWeb/pokemonlist/index2.html
+++ b/DesignWeb/pokemonlist/index2.html
@@ -5,10 +5,12 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css libreri/wow.css">
 
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/bootstrap.js" defer></script>
     <script src="pokemontableau.js" defer></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -73,7 +75,7 @@
 </div>
 <div class="container-fluid bgstarter">
     <div class="row text-center">
-        <h1 class="jumbotron col-xl-12 mb-0">lequel allez vous choisire?!</h1>
+        <h1 class="jumbotron col-xl-12 mb-0 span3 animated bounceInUp">lequel allez vous choisire?!</h1>
     </div>
 </div>
 <div class="container-fluid bgblue">
@@ -81,7 +83,7 @@
         <div class="col-xl-4 card">
         <img src="background/Artikodin.png" height="600" width="529"/>
         </div>
-        <p class="col-md-4 bleu">Artikodin est un grand Pokémon aviaire avec un plumage bleu prédominant. On dit que ses larges
+        <p class="col-md-12 col-xl-4 bleu">Artikodin est un grand Pokémon aviaire avec un plumage bleu prédominant. On dit que ses larges
             ailes sont faites de glace. Il a sur la tête une crête composée de trois plumes en forme de losanges
             bleu foncé, et des yeux rouges. Son court bec et ses longues pattes sont gris. Il a une queue bleu foncé
             qui ressemble à une banderole et qui est plus longue que son corps.
@@ -100,7 +102,7 @@
         <div class="col-xl-6 card">
             <img src="background/Électhor.png" height="551" width="800"/>
         </div>
-        <p class="col-md-4 jaune">Électhor a un corps jaune, et possède deux paires d'ailes.
+        <p class="col-md-12 col-xl-4 jaune">Électhor a un corps jaune, et possède deux paires d'ailes.
             L’une est jaune comme son plumage et l’autre est noire. Ses ailes sont en pics sur les côtés.
             Il a deux petits yeux noirs avec des cernes noirs. Son bec est pointu et orange et il a des serres
             orange à quatre orteils (un derrière et trois devant). Dans les jeux de la première génération,
@@ -119,11 +121,13 @@
         <div class="col-xl-6 card">
             <img src="background/Sulfura.png" height="376" width="800"/>
         </div>
-        <p class="col-md-4 rouge">Sulfura est un grand oiseau de couleur jaune orangé.
-            Il possède un long bec marron, et est reconnaissable à ses ailes, crête et
-            panache enflammés rouge et rose. Il a également une queue enflammée rouge
-            et rose. Il a des serres marron à quatre orteils (un derrière et trois devant).
-            Il a des yeux triangulaires noirs.</p>
+            <p class="col-md-12 col-xl-4 rouge">Sulfura est un grand oiseau de couleur jaune orangé.
+                Il possède un long bec marron, et est reconnaissable à ses ailes, crête et
+                panache enflammés rouge et rose. Il a également une queue enflammée rouge
+                et rose. Il a des serres marron à quatre orteils (un derrière et trois devant).
+                Il a des yeux triangulaires noirs.
+            </p>
+
     </div>
 
 </div>
