--- a/DesignWeb/pokemonlist/index4.html
+++ b/DesignWeb/pokemonlist/index4.html
@@ -5,6 +5,7 @@
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://use.fontawesome.com/releases/v5.0.8/css/all.css" rel="stylesheet">
 
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/bootstrap.js" defer></script>
@@ -37,9 +38,23 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="row paralax">
-
+    <div class="row paralax text-center">
+        <div class="offset-4"></div>
+        <h1 class="rouge mgt col-xl-4">pokemon épée et bouclier</h1>
+        <div class="offset-4"></div>
+        <div class="offset-4"></div>
+        <h1 class="aller col-xl-4">commander maintenant</h1>
+        <div class="offset-4"></div>
     </div>
+</div>
+<div class="container-fluid">
+    <div class="row">
+        <i class="col-3 fab fa-amazon fa-4x p-0"></i>
+        <i class="col-3 fab fa-linux fa-4x p-0"></i>
+        <i class="col-3 fab fa-android fa-4x p-0"></i>
+        <i class="col-3 fab fa-microsoft fa-4x p-0"></i>
+    </div>
+
 </div>
 </body>
 </html>
