--- a/DesignWeb/pokemonlist/index3.html
+++ b/DesignWeb/pokemonlist/index3.html
@@ -9,6 +9,7 @@
     <script src="js/jquery-3.4.1.min.js" defer></script>
     <script src="js/bootstrap.js" defer></script>
     <script src="pokemontableau.js" defer></script>
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -36,7 +37,6 @@
     </div>
 </nav>
 <div class="container-fluid">
-
     <div class="row">
         <div class="col-xl-12 p-0">
             <video  width="100%" playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
@@ -44,7 +44,23 @@
             </video>
         </div>
     </div>
-
+</div>
+<div class="container-fluid">
+    <div class="row bgteam">
+        <div class="col-xl-4 col-md-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2768.5717804687974!2d-71.94548285654507!3d46.05963901540142!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cb803e1d25e766f%3A0xbd121b00829d9e55!2sC%C3%A9gep%20de%20Victoriaville!5e0!3m2!1sfr!2sca!4v1576113988148!5m2!1sfr!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+        </div>
+        <div class="col-xl-2  col-md-4">
+            <input type="text" class="form-control" id="nom" placeholder="entré pseudo pokemon go">
+            <input type="text" class="form-control" id="nom" placeholder="entrez votre votre niveau">
+            <div id="team">
+            <input type="radio" name="team" value="blue" id="bleu"> bleu<br>
+            <input type="radio" name="team" value="yello" id="jaune"> jaune<br>
+            <input type="radio" name="team" value="red"id="rouge"> rouge<br>
+            </div>
+        <a href="index3.html" class="btn btn-danger btn-lg active" role="button" aria-pressed="true"><h6>remetre</h6></a>
+        </div>
+    </div>
 </div>
 
 
