--- a/DesignWeb/pokemonlist/index5.html
+++ b/DesignWeb/pokemonlist/index5.html
@@ -48,8 +48,8 @@
     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
         donner votre avis
     </button>
-
-    <div class="modal" tabindex="-1" role="dialog" id="exampleModal">
+    <div class="offset-4"></div>
+    <div class="modal col-4" tabindex="-1" role="dialog" id="exampleModal">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
@@ -67,6 +67,10 @@
 
             </div>
         </div>
+    </div>
+    <button type="button" class="btn btn-primary" data-toggle="collapse" data-target="#demo">mon avis</button>
+    <div id="demo" class="collapse">
+        digimon n'est qu'un plagiat
     </div>
 </div>
 </body>
